In Progress - Recruitment Dashboard Completed Refactor

--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -29,16 +29,20 @@
                             <div style="flex: 30%; margin: 15px 0px;">
                                 <div class="DisplayTab" tabUrl="HrRequisitionUI-ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="HrRequisitionUI-Stages"></div>
-                                DISPLAYTAB-HRREQUISITIONUI-TODOLIST
-                                DISPLAYTAB-HRREQUISITIONUI-STAGES
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-TODOLIST
+                                DISPLAYTAB-HRREQUISITIONUI-STAGES -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-HRREQUISITIONUI-FORINTERVIEW
-                                DISPLAYTAB-HRREQUISITIONUI-FOROFFER
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ForInterview"></div>
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ForOffer"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-FORINTERVIEW
+                                DISPLAYTAB-HRREQUISITIONUI-FOROFFER -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-HRREQUISITIONUI-NEWAPPLICANT
-                                DISPLAYTAB-HRREQUISITIONUI-NEWJOB
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-NewApplicant"></div>
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-NewJob"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-NEWAPPLICANT
+                                DISPLAYTAB-HRREQUISITIONUI-NEWJOB -->
                             </div>
                         </div>
                     </div>
@@ -47,7 +51,8 @@
                             <div style="flex: 80%; margin: 15px 0px;">
                                 <div style="display: flex; flex-direction: column;">
                                     <div style="flex: 1;">
-                                        DISPLAYTAB-HRREQUISITIONUI-JOBINFO
+                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-JobInfo"></div>
+                                        <!-- DISPLAYTAB-HRREQUISITIONUI-JOBINFO -->
                                     </div>
 
                                     <div style="flex: 1; display: flex; flex-direction: column;">
@@ -69,24 +74,29 @@
                                                             </div>
                                                             <div class="box-body displayTabHtml" module="HrRequisitionUI">
                                                                 <div style="flex: 1;">
-                                                                    DISPLAYTAB-HRREQUISITIONUI-INFO1
+                                                                    <div class="DisplayTab" tabUrl="HrRequisitionUI-Info1"></div>
+                                                                    <!-- DISPLAYTAB-HRREQUISITIONUI-INFO1 -->
                                                                 </div>
                                                                 <div style="display: flex; flex: 1;">
                                                                     <div style="flex: 33%">
-                                                                        DISPLAYTAB-HRREQUISITIONUI-JUSTIFICATION
+                                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-Justification"></div>
+                                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-JUSTIFICATION -->
                                                                     </div>
                                                                     <div style="flex: 33%; margin: 0px 10px;">
-                                                                        DISPLAYTAB-HRREQUISITIONUI-INTERNAL
+                                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-Internal"></div>
+                                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-INTERNAL -->
                                                                     </div>
                                                                     <div style="flex: 33%">
-                                                                        DISPLAYTAB-HRREQUISITIONUI-EXTERNAL
+                                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-External"></div>
+                                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-EXTERNAL -->
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="tab-pane" id="ActivitiesAndApplicants">
-                                                        DISPLAYTAB_HRREQUISITIONAPPLICANTUI
+                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantUI"></div>
+                                                        <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTUI -->
                                                     </div>
                                                 </div>
                                             </div>
@@ -110,34 +120,44 @@
                     <div class="tab-pane" id="Applicants">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTPROFILE
-                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTREFERENCE
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantProfile"></div>
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantReference"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTPROFILE
+                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTREFERENCE -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTEXPERIENCE
-                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTINTERVIEWDETAIL
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantExperience"></div>
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantInterviewDetail"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTEXPERIENCE
+                                DISPLAYTAB-HRREQUISITIONUI-APPLICANTINTERVIEWDETAIL -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-HRREQUISITIONUI-SEARCHAPPLICANT
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-SearchApplicant"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-SEARCHAPPLICANT -->
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="RecruitersAndManagers">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSPROFILE
-                                DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSREQUISITION
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-RecruitersAndManagersProfile"></div>
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-RecruitersAndManagersRequisition"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSPROFILE
+                                DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSREQUISITION -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSINTERVIEWDETAIL
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-RecruitersAndManagersInterviewDetail"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSINTERVIEWDETAIL -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-HRREQUISITIONUI-SEARCHRECRUITERSANDMANAGERS
+                                <div class="DisplayTab" tabUrl="HrRequisitionUI-SearchRecruitersAndManagers"></div>
+                                <!-- DISPLAYTAB-HRREQUISITIONUI-SEARCHRECRUITERSANDMANAGERS -->
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Fulfilled">
-                        DISPLAYTAB-HRREQUISITIONUI-FULFILLED
+                        <div class="DisplayTab" tabUrl="HrRequisitionUI-Fulfilled"></div>
+                        <!-- DISPLAYTAB-HRREQUISITIONUI-FULFILLED -->
                     </div>
                 </div>
             </div>
