In Progress - Refactor Dynamiko-UI

--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <section class="content-header">
-    <div class="DisplayTab" tabUrl="HrRequisitionUI-Header"></div>
+    <div class="DisplayTab" tabUrl="Header"></div>
 </section>
 <section class="content">
     <div style="display: flex;">
@@ -27,20 +27,20 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ToDoList"></div>
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-Stages"></div>
+                                <div class="DisplayTab" tabUrl="ToDoList"></div>
+                                <div class="DisplayTab" tabUrl="Stages"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-TODOLIST
                                 DISPLAYTAB-HRREQUISITIONUI-STAGES -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ForInterview"></div>
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ForOffer"></div>
+                                <div class="DisplayTab" tabUrl="ForInterview"></div>
+                                <div class="DisplayTab" tabUrl="ForOffer"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-FORINTERVIEW
                                 DISPLAYTAB-HRREQUISITIONUI-FOROFFER -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-NewApplicant"></div>
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-NewJob"></div>
+                                <div class="DisplayTab" tabUrl="NewApplicant"></div>
+                                <div class="DisplayTab" tabUrl="NewJob"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-NEWAPPLICANT
                                 DISPLAYTAB-HRREQUISITIONUI-NEWJOB -->
                             </div>
@@ -51,7 +51,7 @@
                             <div style="flex: 80%; margin: 15px 0px;">
                                 <div style="display: flex; flex-direction: column;">
                                     <div style="flex: 1;">
-                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-JobInfo"></div>
+                                        <div class="DisplayTab" tabUrl="JobInfo"></div>
                                         <!-- DISPLAYTAB-HRREQUISITIONUI-JOBINFO -->
                                     </div>
 
@@ -74,20 +74,20 @@
                                                             </div>
                                                             <div class="box-body displayTabHtml" module="HrRequisitionUI">
                                                                 <div style="flex: 1;">
-                                                                    <div class="DisplayTab" tabUrl="HrRequisitionUI-Info1"></div>
+                                                                    <div class="DisplayTab" tabUrl="Info1"></div>
                                                                     <!-- DISPLAYTAB-HRREQUISITIONUI-INFO1 -->
                                                                 </div>
                                                                 <div style="display: flex; flex: 1;">
                                                                     <div style="flex: 33%">
-                                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-Justification"></div>
+                                                                        <div class="DisplayTab" tabUrl="Justification"></div>
                                                                         <!-- DISPLAYTAB-HRREQUISITIONUI-JUSTIFICATION -->
                                                                     </div>
                                                                     <div style="flex: 33%; margin: 0px 10px;">
-                                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-Internal"></div>
+                                                                        <div class="DisplayTab" tabUrl="Internal"></div>
                                                                         <!-- DISPLAYTAB-HRREQUISITIONUI-INTERNAL -->
                                                                     </div>
                                                                     <div style="flex: 33%">
-                                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-External"></div>
+                                                                        <div class="DisplayTab" tabUrl="External"></div>
                                                                         <!-- DISPLAYTAB-HRREQUISITIONUI-EXTERNAL -->
                                                                     </div>
                                                                 </div>
@@ -95,7 +95,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="tab-pane" id="ActivitiesAndApplicants">
-                                                        <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantUI"></div>
+                                                        <div class="DisplayTab" tabUrl="ApplicantUI"></div>
                                                         <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTUI -->
                                                     </div>
                                                 </div>
@@ -120,19 +120,19 @@
                     <div class="tab-pane" id="Applicants">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantProfile"></div>
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantReference"></div>
+                                <div class="DisplayTab" tabUrl="ApplicantProfile"></div>
+                                <div class="DisplayTab" tabUrl="ApplicantReference"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTPROFILE
                                 DISPLAYTAB-HRREQUISITIONUI-APPLICANTREFERENCE -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantExperience"></div>
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-ApplicantInterviewDetail"></div>
+                                <div class="DisplayTab" tabUrl="ApplicantExperience"></div>
+                                <div class="DisplayTab" tabUrl="ApplicantInterviewDetail"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-APPLICANTEXPERIENCE
                                 DISPLAYTAB-HRREQUISITIONUI-APPLICANTINTERVIEWDETAIL -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-SearchApplicant"></div>
+                                <div class="DisplayTab" tabUrl="SearchApplicant"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-SEARCHAPPLICANT -->
                             </div>
                         </div>
@@ -140,23 +140,23 @@
                     <div class="tab-pane" id="RecruitersAndManagers">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-RecruitersAndManagersProfile"></div>
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-RecruitersAndManagersRequisition"></div>
+                                <div class="DisplayTab" tabUrl="RecruitersAndManagersProfile"></div>
+                                <div class="DisplayTab" tabUrl="RecruitersAndManagersRequisition"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSPROFILE
                                 DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSREQUISITION -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-RecruitersAndManagersInterviewDetail"></div>
+                                <div class="DisplayTab" tabUrl="RecruitersAndManagersInterviewDetail"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-RECRUITERSANDMANAGERSINTERVIEWDETAIL -->
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="HrRequisitionUI-SearchRecruitersAndManagers"></div>
+                                <div class="DisplayTab" tabUrl="SearchRecruitersAndManagers"></div>
                                 <!-- DISPLAYTAB-HRREQUISITIONUI-SEARCHRECRUITERSANDMANAGERS -->
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Fulfilled">
-                        <div class="DisplayTab" tabUrl="HrRequisitionUI-Fulfilled"></div>
+                        <div class="DisplayTab" tabUrl="Fulfilled"></div>
                         <!-- DISPLAYTAB-HRREQUISITIONUI-FULFILLED -->
                     </div>
                 </div>
