In Progress - Recruitment 360

--- a/displaytabs/tabs/HrRequisitionUI/ApplicantUI.html
+++ b/displaytabs/tabs/HrRequisitionUI/ApplicantUI.html
@@ -2,7 +2,7 @@
 
 <div class="box box-default myChildTab" th:attr="submodule=${CODEMODEL.entityUI},cache=${CHILD_RECORD_ANNOTATION.cache()}">
     <div class="box-header with-border">
-        <h3 class="box-title">[(${CHILD_RECORD_ANNOTATION.title()})]</h3>
+        <h3 class="box-title">Activities and Applicants</h3>
         <a href="#" class="pull-right btn-box-tool formLinker" linkModule="HrApplicantUI"><i class="fa fa-plus"></i> Register Applicant</a>
     </div>
 
