--- a/displaytabs/tabs/HrRequisitionUI/JobInfo.html
+++ b/displaytabs/tabs/HrRequisitionUI/JobInfo.html
@@ -36,7 +36,7 @@
             <form role="form-horizontal" module="HrRequisitionUI" submodule="HrRequisitionUI" addInfo="JobInfo" class="addInfo">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title" id="myModalLabel">Job Information</h3>
+                    <h3 class="modal-title">Job Information</h3>
                 </div>
                 <div class="modal-body">
                     <div class="box-body" style="height:400px; overflow-y: auto; overflow-x: hidden;">
