In Progress - Recruitment 360

--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <section class="content-header">
-    DISPLAYTAB-EMPLOYEEUI-HEADER
+    <div class="DisplayTab" tabUrl="Header"></div>
 </section>
 <section class="content">
     <div style="display: flex;">
@@ -27,23 +27,23 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-EMPLOYEEUI-TODOLIST
-                                DISPLAYTAB-EMPLOYEEUI-LEAVE
-                                DISPLAYTAB-EMPLOYEEUI-NEWHIRES
+                                <div class="DisplayTab" tabUrl="ToDoList"></div>
+                                <div class="DisplayTab" tabUrl="Leave"></div>
+                                <div class="DisplayTab" tabUrl="NewHires"></div>
 <!--DISPLAYTAB-EMPLOYEEUI-TRAINING-->
                             </div>
                             <div style="flex: 70%; margin: 15px 0px; margin-left: 15px;">
                                 <div style="display: flex; flex-direction: column;">
                                     <div style="flex: 1;">
-                                        DISPLAYTAB-EMPLOYEEUI-DASHBOARDSEARCHEMPLOYEE
+                                        <div class="DisplayTab" tabUrl="DashboardSearchEmployee"></div>
                                     </div>
                                 </div>
                                 <div style="display: flex;">
                                     <div style="flex: 70%;">
-                                        DISPLAYTAB-EMPLOYEEUI-TIMESHEET
+                                        <div class="DisplayTab" tabUrl="TimeSheet"></div>
                                     </div>
                                     <div style="flex: 30%;">
-                                        DISPLAYTAB-EMPLOYEEUI-TEAMMEMBER
+                                        <div class="DisplayTab" tabUrl="TeamMember"></div>
                                     </div>
                                 </div>
                             </div>
@@ -52,27 +52,27 @@
                     <div class="tab-pane" id="Profile">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-EMPLOYEEUI-PROFILE
-                                DISPLAYTAB-EMPLOYEEUI-REFERENCE
+                                <div class="DisplayTab" tabUrl="Profile"></div>
+                                <div class="DisplayTab" tabUrl="Reference"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-EMPLOYEEUI-EXPERIENCE
+                                <div class="DisplayTab" tabUrl="Experience"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-EMPLOYEEUI-SEARCHEMPLOYEE
+                                <div class="DisplayTab" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Attendance">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-EMPLOYEEUI-ATTENDANCEMONTH
+                                <div class="DisplayTab" tabUrl="AttendanceMonth"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-EMPLOYEEUI-ATTENDANCE
+                                <div class="DisplayTab" tabUrl="Attendance"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-EMPLOYEEUI-SEARCHEMPLOYEE
+                                <div class="DisplayTab" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
 
@@ -80,19 +80,19 @@
                     <div class="tab-pane" id="Finance">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                DISPLAYTAB-EMPLOYEEUI-ATTENDANCEMONTH
+                                <div class="DisplayTab" tabUrl="AttendanceMonth"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-EMPLOYEEUI-PAYROLL
+                                <div class="DisplayTab" tabUrl="Payroll"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-EMPLOYEEUI-SEARCHEMPLOYEE
+                                <div class="DisplayTab" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
 
                     </div>
                     <div class="tab-pane" id="Performance">
-                        DISPLAYTAB-EMPLOYEEUI-PERFORMANCE
+                        <div class="DisplayTab" tabUrl="Performance"></div>
                     </div>
                 </div>
             </div>
