--- a/displaytabs/PayrollScheduleUI-MainTemplate.html
+++ b/displaytabs/PayrollScheduleUI-MainTemplate.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <section class="content-header">
-    DISPLAYTAB-PAYROLLSCHEDULEUI-HEADER
+    <div class="DisplayTab" tabUrl="Header"></div>
 </section>
 <section class="content">
     <div style="display: flex;">
@@ -19,20 +19,20 @@
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="UpdatePayroll">
-                        DISPLAYTAB-PAYROLLSCHEDULEUI-UPDATEPAYROLL
+                        <div class="DisplayTab" tabUrl="UpdatePayroll"></div>
                     </div>
                     <div class="tab-pane" id="RunPayroll">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 70%; margin: 15px 0px;">
-                                DISPLAYTAB-PAYROLLSCHEDULEUI-RUNPAYROLL
+                                <div class="DisplayTab" tabUrl="RunPayroll"></div>
                             </div>
                             <div style="flex: 30%; margin: 15px 0px; margin-left: 15px;">
-                                DISPLAYTAB-PAYROLLSCHEDULEUI-PAYROLLTOTALS
+                                <div class="DisplayTab" tabUrl="PayrollTotals"></div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Others">
-                        DISPLAYTAB-PAYROLLSCHEDULEUI-OTHERS
+                        <div class="DisplayTab" tabUrl="Others"></div>
                     </div>
                 </div>
             </div>
