--- a/displaytabs/tabs/EmployeeUI/Experience.html
+++ b/displaytabs/tabs/EmployeeUI/Experience.html
@@ -1,24 +1,92 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <div class="box box-default">
+    <div class="box-header ui-sortable-handle" style="cursor: move;">
+        <i class="fa fa-comments-o"></i>
+        <h3 class="box-title">Experience</h3>
+        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+            <button type="button" class="btn btn-default pull-right HrRequisitionUI_btnAddInterviewSchedule" data-toggle="modal" data-target="#HrRequisitionUI_AddInterviewScheduleDialog"><i class="fa fa-plus"></i> New Interview Schedule</button>
+        </div>
+    </div>
     <div class="box-body box-profile">
-        <img class="profile-user-img img-responsive img-circle" src="dist/img/user4-128x128.jpg" alt="User profile picture">
-
-        <h3 class="profile-username text-center">Nina Mcintire</h3>
-
-        <p class="text-muted text-center">Software Engineer</p>
-
-        <ul class="list-group list-group-unbordered">
-            <li class="list-group-item">
-                <b>Followers</b> <a class="pull-right">1,322</a>
+        <ul class="timeline timeline-inverse">
+            <li class="time-label">
+                        <span class="bg-red">
+                          10 Feb. 2014
+                        </span>
             </li>
-            <li class="list-group-item">
-                <b>Following</b> <a class="pull-right">543</a>
+            <li>
+                <i class="fa fa-envelope bg-blue"></i>
+
+                <div class="timeline-item">
+                    <span class="time"><i class="fa fa-clock-o"></i> 12:05</span>
+
+                    <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
+
+                    <div class="timeline-body">
+                        Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
+                        weebly ning heekya handango imeem plugg dopplr jibjab, movity
+                        jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
+                        quora plaxo ideeli hulu weebly balihoo...
+                    </div>
+                    <div class="timeline-footer">
+                        <a class="btn btn-primary btn-xs">Read more</a>
+                        <a class="btn btn-danger btn-xs">Delete</a>
+                    </div>
+                </div>
             </li>
-            <li class="list-group-item">
-                <b>Friends</b> <a class="pull-right">13,287</a>
+            <li>
+                <i class="fa fa-user bg-aqua"></i>
+
+                <div class="timeline-item">
+                    <span class="time"><i class="fa fa-clock-o"></i> 5 mins ago</span>
+
+                    <h3 class="timeline-header no-border"><a href="#">Sarah Young</a> accepted your friend request
+                    </h3>
+                </div>
+            </li>
+            <li>
+                <i class="fa fa-comments bg-yellow"></i>
+
+                <div class="timeline-item">
+                    <span class="time"><i class="fa fa-clock-o"></i> 27 mins ago</span>
+
+                    <h3 class="timeline-header"><a href="#">Jay White</a> commented on your post</h3>
+
+                    <div class="timeline-body">
+                        Take me to your leader!
+                        Switzerland is small and neutral!
+                        We are more like Germany, ambitious and misunderstood!
+                    </div>
+                    <div class="timeline-footer">
+                        <a class="btn btn-warning btn-flat btn-xs">View comment</a>
+                    </div>
+                </div>
+            </li>
+            <!-- timeline time label -->
+            <span class="bg-green">
+                          3 Jan. 2014
+                        </span>
+            </li>
+            <li>
+                <i class="fa fa-camera bg-purple"></i>
+
+                <div class="timeline-item">
+                    <span class="time"><i class="fa fa-clock-o"></i> 2 days ago</span>
+
+                    <h3 class="timeline-header"><a href="#">Mina Lee</a> uploaded new photos</h3>
+
+                    <div class="timeline-body">
+                        <img src="http://placehold.it/150x100" alt="..." class="margin">
+                        <img src="http://placehold.it/150x100" alt="..." class="margin">
+                        <img src="http://placehold.it/150x100" alt="..." class="margin">
+                        <img src="http://placehold.it/150x100" alt="..." class="margin">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <i class="fa fa-clock-o bg-gray"></i>
             </li>
         </ul>
-        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
     </div>
 </div>
