--- a/displaytabs/tabs/EmployeeUI/Loans.html
+++ b/displaytabs/tabs/EmployeeUI/Loans.html
@@ -2,7 +2,7 @@
 
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Employee Payroll</h3>
+        <h3 class="box-title">Employee Loans</h3>
     </div>
     <div class="box-body">
         <div class="table-responsive">
