--- a/displaytabs/tabs/EmployeeUI/Reference.html
+++ b/displaytabs/tabs/EmployeeUI/Reference.html
@@ -1,24 +1,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <div class="box box-default">
+    <div class="box-header with-border">
+        <h3 class="box-title">References</h3>
+    </div>
     <div class="box-body box-profile">
-        <img class="profile-user-img img-responsive img-circle" src="dist/img/user4-128x128.jpg" alt="User profile picture">
-
-        <h3 class="profile-username text-center">Nina Mcintire</h3>
-
-        <p class="text-muted text-center">Software Engineer</p>
-
         <ul class="list-group list-group-unbordered">
             <li class="list-group-item">
-                <b>Followers</b> <a class="pull-right">1,322</a>
+                <b>New Job Application</b> <a class="pull-right HrRequisitionUI_TotalNewApplication">1,322</a>
             </li>
             <li class="list-group-item">
-                <b>Following</b> <a class="pull-right">543</a>
+                <b>For Interview</b> <a class="pull-right HrRequisitionUI_TotalForInterview">543</a>
             </li>
             <li class="list-group-item">
-                <b>Friends</b> <a class="pull-right">13,287</a>
+                <b>For Offer</b> <a class="pull-right HrRequisitionUI_TotalForOffer">13,287</a>
+            </li>
+            <li class="list-group-item">
+                <b>Fulfilled</b> <a class="pull-right HrRequisitionUI_TotalFulfilled">13,287</a>
             </li>
         </ul>
-        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
     </div>
 </div>
