--- a/displaytabs/tabs/EmployeeUI/TimeSheet.html
+++ b/displaytabs/tabs/EmployeeUI/TimeSheet.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<div class="box box-info">
+<div class="box box-default">
     <div class="box-header with-border">
         <h3 class="box-title">Employee Time Sheet</h3>
     </div>
