--- a/displaytabs/tabs/PurchaseOrderUI/Header.html
+++ b/displaytabs/tabs/PurchaseOrderUI/Header.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <h1>
-    Accounting 360
+    Purchasing 360
 </h1>
 <br/>
 <div class="row" style="display: flex;">
